# headlines-web

./: Cargo.toml  notes  setup_web.sh  start_web.sh
headlines/: Cargo.toml
headlines/src/: headlines.rs  lib.rs  main.rs
newslib/: Cargo.toml
newslib/src/: lib.rs
webapp/: headlines.js  headlines_bg.wasm  index.html
