[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = "0.19.0"
serde = {version = "1.0.147", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
newslib = {path = "../newslib"}
gloo-timers = "0.2.5"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
