[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
newslib = { path = "../newslib" }
gloo-timers = "0.2.5"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"
